--- a/_posts/2021-09-12-post-0015.md
+++ b/_posts/2021-09-12-post-0015.md
@@ -141,13 +141,13 @@ def add_kernel(arr1_ptr, arr2_ptr, output_ptr, N):
     tl.store(output_ptr + offsets, output, mask=mask)
 ```
 
-To use the kernel, we can define a helper function as shown below
+To use the kernel, we define a helper function as shown below
 ```python
 def add(arr1: torch.Tensor, arr2: torch.Tensor):
     output = torch.empty_like(arr1)
     N = output.numel()
 
-    grid = lambda: (triton.cdiv(N, BLOCK_SIZE),)
+    grid = lambda meta: (triton.cdiv(N, BLOCK_SIZE),)
 
     add_kernel[grid](arr1, arr2, output, N)
     return output
@@ -155,6 +155,65 @@ def add(arr1: torch.Tensor, arr2: torch.Tensor):
 
 `grid` is basically specifying the space over which we will work. In our case, the grid is 1D and we specify how the data is split along the grid. So if the input arrays are of size then we want to have the grid as following `[0:512], [512:1024]`. So in this step, we are basically specifying how to split the input data and pass it to the kernel.
 
+By default, `grid` takes one positional argument which we call `meta`. The purpose of `meta` is to provide information like `BLOCK_SIZE` but we used a global variable to define that.
+
+Now we can call the `add` function as a normal python function, as shown below (make sure the inputs passed to the function are already on the GPU)
+
+```python
+arr_size = 100_000
+arr1 = torch.rand(arr_size, device='cuda')
+arr2 = torch.rand(arr_size, device='cuda')
+
+pytorch_out = arr1 + arr2
+triton_out = add(arr1, arr2)
+
+print(torch.sum(torch.abs(pytorch_out - triton_out)))
+```
+
+Out
+```
+❯ python temp.py
+tensor(0., device='cuda:0')
+```
+
+## Add for higher dim-tensors
+We can also reuse the same kernel for N-dim tensors. This gives us the flexibility to avoid writing multiple kernels for different number of input dimensions. The idea is simple we reshape the tensor to 1D tensor in the helper function and then reshape the output tensor.
+
+The reshaping operation is not a time consuming operation as we are just modifying the stride values in the tensor class. The modified helper function is shown below.
+
+```python
+def add(arr1: torch.Tensor, arr2: torch.Tensor):
+    input_shape = arr1.shape
+    arr1 = arr1.view(-1)
+    arr2 = arr2.view(-1)
+
+    output = torch.empty_like(arr1)
+    N = output.numel()
+
+    grid = lambda meta: (triton.cdiv(N, BLOCK_SIZE),)
+
+    add_kernel[grid](arr1, arr2, output, N)
+
+    output = output.view(input_shape)
+    return output
+```
+And then we call the call the function same as before
+```python
+arr_size = (100, 100, 100)
+arr1 = torch.rand(arr_size, device='cuda')
+arr2 = torch.rand(arr_size, device='cuda')
+
+pytorch_out = arr1 + arr2
+triton_out = add(arr1, arr2)
+
+print(torch.sum(torch.abs(pytorch_out - triton_out)))
+```
+
+Out
+```
+❯ python temp.py
+tensor(0., device='cuda:0')
+```
 This was a simple example. But in the case of complex examples like matrix multiplication, how you split the data can have a huge effect on the performance. Triton docs provide a [tutorial](https://triton-lang.org/getting-started/tutorials/03-matrix-multiplication.html) on how to write an efficient matrix multiplication kernel which goes into much more detail.
 
 This was a short tutorial introducing GPU programming basics and getting you started with Triton. Check the Triton project on [openai/github](https://github.com/openai/triton) if you want to learn more.
