--- a/_posts/2021-09-12-post-0015.md
+++ b/_posts/2021-09-12-post-0015.md
@@ -65,7 +65,7 @@ Because GPUs have 1000s of cores, doing simple things like addition, matrix mult
 ## CUDA vs Triton
 We saw the CUDA execution model above. Now let's see how Triton differs from the above model.
 
-In CUDA each kernel is associated with a *thread-block* (i.e. a collection of *threads*). In Triton, each kernel is associated with a single *thread*. This execution paradigm solves the problem of memory synchronization between threads, inter-thread communication while allowing automatic parallelization.
+In CUDA each kernel is associated with a *thread block* (i.e. a collection of *threads*). In Triton, each kernel is associated with a single *thread*. This execution paradigm solves the problem of memory synchronization between threads, inter-thread communication while allowing automatic parallelization.
 
 Now instead of storing threads inside a thread block, a block consists of a *range* i.e. tiles of pointers to threads. The interesting thing about this is you can have as many ranges as you want. So if your input is 2D you can specify Range(10) for the x-axis and Range(5) on the y-axis for a total of 50 threads. Similarly, you can define ranges along as many dimensions as you want.
 
@@ -172,14 +172,14 @@ print(torch.sum(torch.abs(pytorch_out - triton_out)))
 
 Out
 ```
-❯ python temp.py
+❯ python main.py
 tensor(0., device='cuda:0')
 ```
 
 ## Add for higher dim-tensors
-We can also reuse the same kernel for N-dim tensors. This gives us the flexibility to avoid writing multiple kernels for different number of input dimensions. The idea is simple we reshape the tensor to 1D tensor in the helper function and then reshape the output tensor.
+We can also reuse the same kernel for N-dim tensors. This gives us the flexibility to avoid writing multiple kernels for a different number of input dimensions. The idea is simple we reshape the tensor to a 1D tensor in the helper function and then reshape the output tensor.
 
-The reshaping operation is not a time consuming operation as we are just modifying the stride values in the tensor class. The modified helper function is shown below.
+The reshaping operation is not a time-consuming operation as we are just modifying the stride values in the tensor class. The modified helper function is shown below.
 
 ```python
 def add(arr1: torch.Tensor, arr2: torch.Tensor):
@@ -197,7 +197,7 @@ def add(arr1: torch.Tensor, arr2: torch.Tensor):
     output = output.view(input_shape)
     return output
 ```
-And then we call the call the function same as before
+And then we call the function the same as before
 ```python
 arr_size = (100, 100, 100)
 arr1 = torch.rand(arr_size, device='cuda')
@@ -211,7 +211,7 @@ print(torch.sum(torch.abs(pytorch_out - triton_out)))
 
 Out
 ```
-❯ python temp.py
+❯ python main.py
 tensor(0., device='cuda:0')
 ```
 This was a simple example. But in the case of complex examples like matrix multiplication, how you split the data can have a huge effect on the performance. Triton docs provide a [tutorial](https://triton-lang.org/getting-started/tutorials/03-matrix-multiplication.html) on how to write an efficient matrix multiplication kernel which goes into much more detail.
