--- a/_posts/2021-09-17-post-0016.md
+++ b/_posts/2021-09-17-post-0016.md
@@ -4,11 +4,13 @@ description: "A CNN model is used to learn data augmentation for image classific
 layout: post
 toc: true
 comments: true
-hide: true
+hide: false
 search_exclude: true
-permalink: /writing-custom-cuda-kernels-with-triton
+permalink: /data-augmentation-with-resizer-network-for-image-classification
 # image: images/post_0016/01.png
 categories: [paper-implementation]
 ---
+
+# WIP
 
 [github](https://github.com/KushajveerSingh/resize_network_cv), [paper](https://arxiv.org/abs/2103.09950)
