--- a/_posts/2021-09-17-post-0016.md
+++ b/_posts/2021-09-17-post-0016.md
@@ -13,16 +13,16 @@ categories: [paper-implementation]
 
 [github](https://github.com/KushajveerSingh/resize_network_cv), [paper](https://arxiv.org/abs/2103.09950)
 
-In a recent paper, [Learning to Resize Images for Computer Vision Tasks](https://arxiv.org/abs/2103.09950) by Google AI, the authors proposed a new way to do resize images before passing it through an image classifier. Normally, we would resize the images to 224x224 spatial resolution using some interpolation method (like bilinear, bicubic) but what if we replaced the fixed resizer with a learnable resizer?
+In a recent paper, [Learning to Resize Images for Computer Vision Tasks](https://arxiv.org/abs/2103.09950) by Google AI, the authors proposed a new way to resize images before feeding the image to an image classifier. Normally, we would resize the images to 224x224 spatial resolution using some interpolation method (like bilinear, bicubic) but what if we replaced the fixed resizer with a learnable resizer? This is the question that the paper aims to answer.
 
-In summary, we want to learn a model that will learn to resize images (e.g. input image size is 448x448 and the output is of size 224x224 which will be passed to an image classifier, like ResNet). The resized images would not have the same visual quality as the original image but instead it will improve task performance. An example is shown in Figure 1.
+In summary, we want to learn a model that will learn to resize images (e.g. input image size is 448x448 and the output is of size 224x224 which will be passed to an image classifier, like ResNet). The resized images would not have the same visual quality as the original image but instead it will improve task performance. An example of the images outputted by this model is shown in Figure 1 and as we can see these clearly do not resemble real life images.
 
 ![]({{ site.baseurl }}/images/post_0016/01.png "Figure 1: Examples of the proposed learned resizer model trained with different image classification models on ImageNet.")
 
 ## Why we need to resize images?
-The first step in almost every image processing pipeline is the down-scaling of images. This can be done using biliearn interpolation, nearest neighbor sampling (in case of image segmentation), cropping the image to desired resolution.
+The first step in almost every image processing pipeline is the down-scaling of images to a fixed resolution. This can be done using biliearn interpolation, nearest neighbor sampling (in case of image segmentation), cropping the image to desired resolution.
 
-The reasons for doing this include the memoery limitations on the GPU. At high resolution, we have to reduce the batch size and at the same time training and inference are slower. Also, mini-batch gradient descent requires inputs to be of same size.
+The reasons for doing this include the memory limitations on the GPU. At high resolution, we have to reduce the batch size and at the same time training and inference are slower. Also, mini-batch gradient descent requires inputs to be of the same size.
 
 ## Resizer model
 The proposed Resizer model is used to down-scale the images. Now due to the inherent limitations discussed above, we have to pass a fixed size images to the Resizer model also, which may seem counterintuitve in the start. But here is the pipiline with and without the resizer model.
@@ -39,7 +39,9 @@ Original Image -> Downscale to 448x448 -> Resizer to downscale to 224x224 -> Res
 
 As we can see from above, we are downscaling the image to 448x448, which has 4x times more pixels that 224x224. This means the model has 4x times more information for the downstream task.
 
-The proposed resizer model is shown in Figure 2 (taken from the paper)
+> **Note**: The value 448x448 is completely arbitrary and you can downscale to whatever resolution you want.
+
+The proposed resizer model is shown in Figure 2.
 
 ![]({{ site.baseurl }}/images/post_0016/02.png "Figure 2: Proposed CNN model for resizing images.")
 
