--- a/_posts/2021-10-03-post-0017.md
+++ b/_posts/2021-10-03-post-0017.md
@@ -1,6 +1,6 @@
 ---
 title: "Complete tutorial on building images using Docker"
-description: "Everything you need to know to write Dockerfile and run containers using Docker. An example of setting up Ubuntu, default user, Miniconda, PyTorch is used to show all the necessary Docker commands."
+description: "Everything you need to know to write Dockerfile and run containers using Docker with an example of setting up Ubuntu, default user, Miniconda, PyTorch."
 layout: post
 toc: true
 comments: true
@@ -11,7 +11,7 @@ permalink: /docker
 categories: [general]
 ---
 
-[Docker](https://docs.docker.com/) provides a way to run your programs as containers on top of a host operating system. [Dockerfile](https://docs.docker.com/engine/reference/builder/) provides instructions on how to build the images that are then run as containers. This post discusses all the things you need to create Dockerfile's with an example of setting up [Ubuntu](https://ubuntu.com/), [Miniconda](https://docs.conda.io/en/latest/miniconda.html) and [PyTorch](https://pytorch.org/).
+[Docker](https://docs.docker.com/) provides a way to run your programs as containers on top of a host operating system. [Dockerfile](https://docs.docker.com/engine/reference/builder/) provides instructions on how to build the images that are then run as containers. This post discusses all the things you need to create Dockerfile's with an example of setting up [Ubuntu](https://ubuntu.com/), [Miniconda](https://docs.conda.io/en/latest/miniconda.html), and [PyTorch](https://pytorch.org/).
 
 ## Building the image
 `docker build` command is used to build an image from `Dockerfile` and a *context* (a PATH or URL). *context* refers to all the files specified in the build command. The steps to build the image are as follows
@@ -44,7 +44,7 @@ The command to build the image is as follows
 > docker build https://github.com/KushajveerSingh/Dockerfile.git#master
 ```
 
-> **Note:-** The above command will fail as there is not Dockerfile in the specified location.
+> **Note:-** The above command will fail as there is no Dockerfile in the specified location.
 
 > **Note:-** The Dockerfile should be present on the specified URL.
 
@@ -75,7 +75,7 @@ REPOSITORY                TAG          IMAGE ID       CREATED         SIZE
 <none>                    <none>       e1eaeb418bbb   5 seconds ago   63.1MB
 ```
 
-You can specify a repository and tag to every docker image which can then be used to easily access the image using `-t` flag. `REPOSITORY` can be though of like the name of your Github repository and `TAG` is used to specify the version of your image. For example, `ubuntu:18.04`, `ubuntu:latest`.
+You can specify a repository and tag to every docker image which can then be used to easily access the image using `-t` flag. `REPOSITORY` can be thought of like the name of your Github repository and `TAG` is used to specify the version of your image. For example, `ubuntu:18.04`, `ubuntu:latest`.
 
 ```
 > docker build -t test:0.1 .
@@ -91,7 +91,7 @@ You can specify multiple tags also
 ```
 
 ### Docker image layers
-The Docker daemon runs the instructions from top-to-bottom one-by-one. And the result of most of the instructions (`FROM`, `ADD`, `COPY`) is committed to a new image. Due to this reason you need to be careful when using these instructions as every single usage of them would result in the creation of a new image which would increase the size of the final image.
+The Docker daemon runs the instructions from top-to-bottom one-by-one. And the result of most of the instructions (`FROM`, `ADD`, `COPY`) is committed to a new image. Due to this reason, you need to be careful when using these instructions as every single usage of them would result in the creation of a new image which would increase the size of the final image.
 
 Why Docker does this? Consider the following Dockerfile
 ```
@@ -149,7 +149,7 @@ In summary, to build a Docker image you can use the following command
 ```
 
 ## Escape character
-This is an example of parser directive. Parser directives are specified in the first line of Dockerfile and do not add layers to the build. You can specify the character to break up lines in Dockerfile using this.
+This is an example of a parser directive. Parser directives are specified in the first line of Dockerfile and do not add layers to the build. You can specify the character to break up lines in Dockerfile using this.
 ```
 # escape=\
 FROM ubuntu:18.04
@@ -189,14 +189,14 @@ For this post, I build on top of the Ubuntu image. You can build the image and t
 > docker run -it --name temp test:0.1
 ```
 
-You will see that it is a bare bones install. It does not have any user or sudo. It provides us with the linux kernel and we have to build everything on top of that.
+You will see that it is a bare-bones install. It does not have any user or sudo. It provides us with the Linux kernel and we have to build everything on top of that.
 
-In the next couple of sections we look at all the instructions that we can in the Dockerfile and then we will use all these instructions to build a Ubuntu/Miniconda/PyTorch image.
+In the next couple of sections, we look at all the instructions that we can in the Dockerfile, and then we will use all these instructions to build a Ubuntu/Miniconda/PyTorch image.
 
 ## ARG and ENV
 Environment variables are often used to declare variables in the scripts or set up some variables that will persist when the container is run. Docker allows us two ways to set variables: `ARG` and `ENV`.
 
-- `ARG` instruction defines a variables that users will pass at build-time with the `docker build` command using `--build-arg <name>=<value>` flag. These will only be used in the Dockerfile
+- `ARG` instruction defines a variables that users will pass at build-time with the `docker build` command using `--build-arg <name>=<value>` flag. These will only be used in the Dockerfile.
 - `ENV` instruction sets the environment variable in the Dockerfile and the environment variable will persist when a container is run from the resulting image.
 
 ### ARG
@@ -211,7 +211,7 @@ And then we can specify the version of ubuntu when building the image
 > DOCKER_BUILDKIT=1 docker build -t test --build-arg UBUNTU_VERSION=18.04 .
 ```
 
-We can also specify default value to `ARG` as
+We can also specify a default value to `ARG` as
 ```
 ARG UBUNTU_VERSION=18.04
 ```
@@ -219,12 +219,12 @@ ARG UBUNTU_VERSION=18.04
 To access the value of `ARG` you can either use `$UBUNTU_VERSION` or `${UBUNTU_VERSION}` syntax. The second method is useful when you want to access the value of `ARG` inside a string.
 
 Using `ARG`
-- Use `ARG` for variables that are only needed in the Dockerfile and are not needed when the container is running. In this case, the version of ubuntu is not needed when the container is running.
-- `ARG` that is used before `FROM` can only be used in `FROM`.
-- `ARG` used after `FROM` can be used anywhere in the Dockerfile (there is an exception to this in case of multi-stage builds i.e. when we use multiple `FROM` instructions in the same Dockerfile)
+- Use `ARG` for variables that are only needed in the Dockerfile and are not needed when the container is running. In this case, the version of Ubuntu is not needed when the container is running.
+- `ARG` that is used before `FROM` can only be used in `FROM`
+- `ARG` used after `FROM` can be used anywhere in the Dockerfile (there is an exception to this in the case of multi-stage builds i.e. when we use multiple `FROM` instructions in the same Dockerfile)
 
 ### ENV
-This is same as `ARG` except the `ENV` will persist when a container is run from the resulting image. An example of this includes
+This is the same as `ARG` except the `ENV` will persist when a container is run from the resulting image. An example of this includes
 ```
 ENV PYTORCH_VERSION 1.9.0
 ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64
@@ -237,7 +237,7 @@ ENV PATH  /home/default/miniconda3/bin:$PATH
 These two instructions can be considered as documentation instructions. Having these instructions in Dockerfile has no effect on the image, these are just used to provide metadata information.
 
 ### LABEL
-`LABEL` can be used to specify information like author of the Dockerfile and other relevant information
+`LABEL` can be used to specify information like the author of the Dockerfile and other relevant information
 ```
 LABEL author = "Kushajveer Singh"
 LABEL email = "kushajreal@gmail.com"
@@ -285,7 +285,7 @@ COPY --chown=default:sudo /file/on/local/drive /path/on/image
 COPY --chown=default:sudo script.sh /home/default
 ```
 
-The `<dest>` path is either absolute path or a path relative to `WORKDIR` which we will discuss later.
+The `<dest>` path is either an absolute path or a path relative to `WORKDIR` which we will discuss later.
 
 Now let's look at the differences between each instruction.
 
@@ -325,7 +325,7 @@ RUN <command>
 
 and it will run the command in a shell (by default `/bin/sh -c` on Linux). Every `RUN` instruction will create a new layer and due to this reason you should try to group multiple `RUN` instructions into a single logical group.
 
-To group multiple `RUN` instruction you can either use semicolon or `&&`.
+To group multiple `RUN` instructions you can either use a semicolon or `&&`.
 ```
 RUN <command_1> ; \
     <command_2> ; \
@@ -342,7 +342,7 @@ These are all the instructions that we would need to create a Docker image. I le
 
 ## Summary of all commands
 - `FROM` - Every Dockerfile starts with this instruction and it provides the base image on which we build our image
-- `ARG` - We can specify command line arguments using `--build-arg` to be used in the Dockerfile only
+- `ARG` - We can specify command-line arguments using `--build-arg` to be used in the Dockerfile only
 - `ENV` - Environment variables that will be used in Dockerfile and will persist when the container is run
 - `LABEL` - To specify metadata like author name, ...
 - `EXPOSE` - To document the ports that are intended to be used when the container is run
@@ -354,7 +354,7 @@ These are all the instructions that we would need to create a Docker image. I le
 
 ## Ubuntu, PyTorch Dockerfile
 ### Base image
-We will use [Ubuntu](https://hub.docker.com/_/ubuntu) as the base image. As discussed before it provides us with a bare bones Linux distribution and we have to setup everything that we need.
+We will use [Ubuntu](https://hub.docker.com/_/ubuntu) as the base image. As discussed before it provides us with a bare-bones Linux distribution and we have to setup everything that we need.
 
 ```
 ARG UBUNTU_VERSION=18.04
@@ -375,14 +375,14 @@ RUN apt update --fix-missing && \
     apt install -y --no-install-recommends
 ```
 
-`--fix-missing` is optional. It is used in case we have broken dependencies and using this flag can help us resolve the issue in most of the cases. As we are starting from a clean install, this flag does not do much.
+`--fix-missing` is optional. It is used in case we have broken dependencies and using this flag can help us resolve the issue in most cases. As we are starting from a clean install, this flag does not do much.
 
 `apt install -y --no-install-recommends`. The `-y` flag helps us to bypass the yes/no prompt. Each package in Ubuntu comes with three dependencies
 - main dependencies
 - recommended packages
 - suggested packages
 
-By default, Ubuntu will install main and recommended packages (to install suggested packages you need to provide `--install-suggests` flag to `apt install`). Our main goal is to keep the size of the docker image to a minimum and due to this reason we do not want to waste space installing recommended packages. The `--no-install-recommends` flag does this and as a result we only install the main dependencies.
+By default, Ubuntu will install main and recommended packages (to install suggested packages you need to provide `--install-suggests` flag to `apt install`). Our main goal is to keep the size of the docker image to a minimum and due to this reason, we do not want to waste space installing recommended packages. The `--no-install-recommends` flag does this and as a result, we only install the main dependencies.
 
 Now you can install any other package that you may require like `ca-certificates` (required by `curl`), `sudo`, `curl`, `git`.
 
@@ -392,14 +392,14 @@ RUN apt clean && \
     rm -rf /var/lib/apt/lists/*
 ```
 
-When we install packages, Ubuntu maintains a cache of the packages in `/var/cache`. The reason for doing this is if something goes wrong when upgrading something and we do not have access to a network connection then we can revert to the old version in the cache to downgrade the package. But we do not need this cache for the Docker image, so we can remove it using `apt clean`. Specifically, `apt clean` with remove the files in `/var/cache/apt/archives/` and `/var/cache/apt/archives/partial`, leaving out a `lock` file and `partial` subdirectory.
+When we install packages, Ubuntu maintains a cache of the packages in `/var/cache`. The reason for doing this is if something goes wrong when upgrading something and we do not have access to a network connection then we can revert to the old version in the cache to downgrade the package. But we do not need this cache for the Docker image, so we can remove it using `apt clean`. Specifically, `apt clean` will remove the files in `/var/cache/apt/archives/` and `/var/cache/apt/archives/partial`, leaving out a `lock` file and `partial` subdirectory.
 
 `/var/lib/apt` stores data related to the apt package manager. This data is automatically downloaded each time we run `apt update`, so there is no point in storing this data and we can safely remove this to reduce the image size using `rm -rf /var/lib/apt/lists/*`.
 
 > **Note:-** To install a package after `rm -rf /var/lib/apt/lists/*` you have to first run `apt update` and then only you can install the required package.
 
 ### Setup sudo and default user
-The next step is setting up root account and a default user. The contents of the Dockerfile to do so are shown next
+The next step is setting up a root account and a default user. The contents of the Dockerfile to do so are shown next
 ```
 ARG USERNAME=default
 ARG PASSWORD=default
@@ -412,10 +412,10 @@ USER $USERNAME
 WORKDIR /home/$USERNAME
 ```
 
-Let's see what each flag did in `useradd`
-- `-r` is used to create a system account i.e. an account created by operating system during installation or the root account
+Let's see what each flag does in `useradd`
+- `-r` is used to create a system account i.e. an account created by the operating system during installation or the root account
 - `-m` is used to create a home directory if it does not exist
-- `-d /home/default` is used to provide the location of home directory
+- `-d /home/default` is used to provide the location of the home directory
 - `-s /bin/bash` is used to specify the name of user's login shell. You can skip this if you want.
 - `-g root -G sudo` This is interesting. The `-g` flag is used to specify the group a user belongs to and `-G` is used to provide a list of additional groups that a user belongs to.
 
@@ -425,7 +425,7 @@ Let's see what each flag did in `useradd`
 - `-u 1000` is used to provide user ID
 - `$USERNAME` is the name of the user that will be created
 
-By default in Ubuntu the root account has no password set. To set a password we can use the following command
+By default in Ubuntu, the root account has no password set. To set a password we can use the following command
 ```
 echo "${USERNAME}:${PASSWORD}" | chpasswd
 ```
@@ -434,7 +434,7 @@ After following the above steps we have done the following
 - Added a user `default`
 - User `default` can get root privileges using `sudo su` and using `default` as the password
 
-There is a bug with `sudo` that is discussed [here](https://github.com/sudo-project/sudo/issues/42) in which you will get the following warning message every time you try to execute a sudo command
+There is a bug with `sudo` that is discussed [here](https://github.com/sudo-project/sudo/issues/42) in which you will get the following warning message every time you try to execute a command with `sudo`
 ```
 > sudo hello > /dev/null
 sudo: setrlimit(RLIMIT_CORE): Operation not permitted
@@ -482,7 +482,7 @@ USER $USERNAME
 WORKDIR /home/$USERNAME
 ```
 
-We can group all the commands to update ubuntu, setup sudo and default user in a single `RUN` command to save space.
+We can group all the commands to update Ubuntu, setup `sudo` and default user in a single `RUN` command to save space.
 
 ### Accessing Nvidia GPU
 To access host GPU in a Docker container you can specify the `--gpus` flag when running the container
@@ -495,7 +495,7 @@ To access host GPU in a Docker container you can specify the `--gpus` flag when 
 This only requires you to have the Nvidia driver setup on the host machine and then you can use `nvidia-smi` in the Docker container to check if the GPUs are being detected.
 
 ### Installing Miniconda
-[Miniconda](https://docs.conda.io/en/latest/miniconda.html) can be used for an easy python setup. Just grab the link of the latest [Linux installer](https://repo.anaconda.com/miniconda/Miniconda3-py39_4.10.3-Linux-x86_64.sh) from the documentation page (in this case it is Python 3.9) and specify the location where you want to install Miniconda
+[Miniconda](https://docs.conda.io/en/latest/miniconda.html) can be used for an easy python setup. Just grab the link of the latest [Linux installer](https://docs.conda.io/en/latest/miniconda.html#linux-installers) from the documentation page (in this case it is Python 3.9) and specify the location where you want to install Miniconda
 ```
 ARG MINICONDA_DOWNLOAD_LINK=https://repo.anaconda.com/miniconda/Miniconda3-py39_4.10.3-Linux-x86_64.sh
 ARG MINICONDA_INSTALL_PATH=/home/$USERNAME
@@ -529,7 +529,7 @@ RUN pip install numpy && \
 > **Note:-** For some reason `numpy` was not getting installed when I ran the `conda install` command so I had to add the `pip install numpy` command.
 
 ### Remove conda/pip cache
-Conda stores index cache, lock files, tarballs and the cache of unused packages. These can be safely removed to save space using the command `conda clean -afy`. So add this as the last conda command in Dockerfile.
+Conda stores index cache, lock files, tarballs, and the cache of unused packages. These can be safely removed to save space using the command `conda clean -afy`. So add this as the last conda command in Dockerfile.
 
 `pip` stores cache in `~/.cache/pip` and this folder can be safely removed using the command `rm -rf ~/.cache/pip`.
 
@@ -545,7 +545,7 @@ And then we can run a container to try out the image
 default@a7f862b6bf73:~$ 
 ```
 
-We can try `nvidia-smi` to check if the GPU is being detected
+We can try `nvidia-smi` to check if the GPUs are being detected
 ```
 default@a7f862b6bf73:~$ nvidia-smi
 Wed Oct  6 05:54:35 2021       
@@ -680,7 +680,7 @@ The reference for `docker attach` can be accessed [here](https://docs.docker.com
 ### Stopping a container
 `docker stop` or `docker kill` can be used to stop multiple running containers. `docker stop` can be considered as a graceful stop. The difference between the two commands is
 - `docker stop`. Stop a running container. The main process will receive `SIGTERM` and after a grace period `SIGKILL` will be received.
-- `docker kill`. Kill a running container. The main process will receive `SIGKILL` or any signal specified by the user.
+- `docker kill`. Kill a running container. The main process will receive `SIGKILL` or any signal specified by the user using `--signal`.
 ```
 > docker stop temp_1
 ```
@@ -700,7 +700,7 @@ In some cases, you may require to delete a container that does not exist and not
 
 The reference for `docker rm` can be accessed [here](https://docs.docker.com/engine/reference/commandline/rm/).
 
-### Creating a container
+### Running a container
 `docker run` command is used to create a container from an image. There are many useful flags when using this command
 ```
 > docker run -it --gpus all --name temp -p 8888:8888 test:0.1
@@ -712,7 +712,7 @@ The reference for `docker rm` can be accessed [here](https://docs.docker.com/eng
 
 The reference for `docker run` can be accessed [here](https://docs.docker.com/engine/reference/run/).
 
-### Connect terminal to container
+### Connect new terminal to container
 If you want to connect a new terminal to a running container, then you can use the following command
 ```
 > docker exec -it {container_name} bash
@@ -721,7 +721,7 @@ If you want to connect a new terminal to a running container, then you can use t
 `docker attach {container_name}` cannot create a new terminal session. It will connect to the old session.
 
 ### Delete all container/images
-To delete all the docker container and images on your system you can use the following two commands (in the order specified)
+To delete all the docker containers and images on your system you can use the following two commands (in the order specified)
 ```
 # Remove all containers
 > docker rm -vf $(docker ps -a -q)
@@ -754,7 +754,7 @@ The references for the above commands
 
 ## Links
 - [KushajveerSingh/Dockerfile](https://github.com/KushajveerSingh/Dockerfile) - You can access the Dockerfile's from this repository to build your own images. Documentation is provided in the [README](https://github.com/KushajveerSingh/Dockerfile/blob/main/README.md) for all the available Dockerfile's.
-- [Dockerhub kushaj](https://hub.docker.com/u/kushaj) - All the images can be found at this link. If you want to use an image but the contents of the image, then you can access the Dockerfile used to create the image from the above [Github](https://github.com/KushajveerSingh/Dockerfile) link and build the image.
+- [Dockerhub kushaj](https://hub.docker.com/u/kushaj) - All the images can be found at this link. If you want to use an image but the contents of the image are old, then you can access the Dockerfile used to create the image from the above [Github](https://github.com/KushajveerSingh/Dockerfile) link and build the image. Instructions to do so are provided in the [READEME](https://github.com/KushajveerSingh/Dockerfile/blob/main/README.md).
 
 ---
 
