--- a/_posts/2021-10-03-post-0017.md
+++ b/_posts/2021-10-03-post-0017.md
@@ -6,7 +6,7 @@ toc: true
 comments: true
 hide: false
 search_exclude: true
-permalink: /docker
+permalink: /complet-tutorial-on-building-images-using-docker
 # image: images/post_0016/01.png
 categories: [general]
 ---
