fix typo in hydra blog

--- a/_posts/2021-03-16-post-0014.md
+++ b/_posts/2021-03-16-post-0014.md
@@ -402,7 +402,7 @@ defaults:
     optional: true
 ```
 
-Here we created a new config group named `dataset_model` that takes the value specified by `dataset` and `model` (like `imagenet_resnet`, `cifar10_resnet`). This is some weird syntax as `defaults` is a list, so you need to specify index before the name i.e. `defaults.0.dataset`. Now we can define the config file in `dataset_model/cifar10_resnet.py`
+Here we created a new config group named `dataset_model` that takes the value specified by `dataset` and `model` (like `imagenet_resnet`, `cifar10_resnet`). This is some weird syntax as `defaults` is a list, so you need to specify index before the name i.e. `defaults.0.dataset`. Now we can define the config file in `dataset_model/cifar10_resnet.yaml`
 ```yaml
 # @package _global_
 model:
